pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints12.pkl
foo: String(true, this.length > 5) = "bob"
